# pyfuzzer

./: .gitignore  README.md  docker-compose.yml  main.py  proxy_log.jsonl  pyproject.toml
fuzzer/: core.py  engine.py  jwt_utils.py  main.py  models.py  payloads.py  payloads_manager.py  report.py  reporter.py  session.py
fuzzer/attacks/: base.py  jwt_replay.py  jwt_role_escalation.py  session_fixation.py
fuzzer/runners/: __init__.py  bwapp.py  dvwa.py  juice_shop.py  storage.py
proxy/: addon.py
reports/: 85d8b2d2-cd48-40c2-9885-844aacceccb8.json  a5b81ce2-6c2f-4096-903b-155606772d3b.json  d3e8d96f-93ae-4705-9404-2b6c177304bd.json  f3404f2c-d88d-4326-92e0-c794cd7b2748.json  fc10fa32-9511-4cb5-a0cf-86bfe7c249a0.json
