[project]
name = "pyfuzzer"
version = "0.1.0"
description = ""
authors = [
    {name = "Rogozin",email = "rogoziniv.study@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp (>=3.13.2,<4.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.14.2,<5.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "fastapi (>=0.121.0,<0.122.0)",
    "jwt (>=1.4.0,<2.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "asyncio (>=4.0.0,<5.0.0)",
    "mitmproxy (>=12.2.0,<13.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
